--- a/WpfClient/Views/SearchPage.xaml
+++ b/WpfClient/Views/SearchPage.xaml
@@ -11,11 +11,12 @@
       x:Name="Search" DataContext="">
 
     <Grid>
-        <TextBox x:Name="searchTextBox" Text="{Binding Path=SearchText}" HorizontalAlignment="Left" Height="23" Margin="35,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" ToolTip="Введите текст для поиска"/>
+        <TextBox x:Name="searchTextBox" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="23" Margin="35,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" ToolTip="Введите текст для поиска">
+            <TextBox.InputBindings>
+                <KeyBinding Key="Enter" Command="{Binding Path=FindCommand}"/>
+            </TextBox.InputBindings>
+        </TextBox>
         <Button x:Name="searchButton" Command="{Binding Path=FindCommand}" Content="Найти" HorizontalAlignment="Left" Margin="360,10,0,0" VerticalAlignment="Top" Width="75" Height="23">
-            <Button.DataContext>
-                <ViewModels:SearchViewModel/>
-            </Button.DataContext>
         </Button>
         <Grid Margin="10,35,0,0" HorizontalAlignment="Left" Width="177" Height="15" VerticalAlignment="Top" >
             <TextBlock Text="Всего записей: " HorizontalAlignment="Left" Width="177"/>
@@ -27,9 +28,10 @@
                 <DataTemplate>
                     <Grid Margin="0,0,0,30">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="30"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
+                        
                         <Label Content="{Binding RowNumber}" Grid.Column="0"/>
                         <Label Content="{Binding RowText}" Grid.Column="1"/>
                     </Grid>
